--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-DATABASE_URL=your_database_url_here
-GITHUB_CLIENT_ID=your_github_client_id_here
-GITHUB_CLIENT_SECRET=your_github_client_secret_here
+DATABASE_URL="your_database_url_here"
+GITHUB_CLIENT_ID="your_github_client_id_here"
+GITHUB_CLIENT_SECRET="your_github_client_secret_here"
+BETTER_AUTH_SECRET="better auth secret "
+BETTER_AUTH_URL="base nextjs url"
