--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@better-auth/stripe": "^1.3.34",
     "@hookform/resolvers": "^5.2.2",
+    "@imagekit/javascript": "^5.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "framer-motion": "^12.23.24",
     "iconsax-reactjs": "^0.0.8",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
