--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
     "sonner": "^2.0.7",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.12",
