--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "bcryptjs": "^3.0.3",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
@@ -28,6 +29,7 @@
     "framer-motion": "^12.23.24",
     "iconsax-reactjs": "^0.0.8",
     "imagekit": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
@@ -36,6 +38,7 @@
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
+    "resend": "^6.4.2",
     "sonner": "^2.0.7",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
