--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.66.0",
     "resend": "^6.4.2",
     "sonner": "^2.0.7",
+    "stripe": "^19.3.1",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
