--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@stripe/react-stripe-js": "^5.4.0",
+    "@stripe/stripe-js": "^8.5.2",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +35,7 @@
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "nanoid": "^5.1.6",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
@@ -42,6 +45,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
     "resend": "^6.4.2",
+    "rough-notation": "^0.5.1",
     "sonner": "^2.0.7",
     "stripe": "^19.3.1",
     "swiper": "^12.0.3",
