--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "ecom-project",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
+  "private": true,"scripts": {
+  "dev": "next dev",
+  "prebuild": "drizzle-kit generate",
+
+  "build": "next build",
+  "start": "next start",
+  "db:push": "drizzle-kit push",
+  "db:generate": "drizzle-kit generate",
+  "db:migrate": "drizzle-kit migrate",
+  "db:studio": "drizzle-kit studio",
+
+  "lint": "next lint || true"
+},
   "dependencies": {
     "@better-auth/stripe": "^1.3.34",
     "@hookform/resolvers": "^5.2.2",
