--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "ecom-project",
   "version": "0.1.0",
-  "private": true,"scripts": {
-  "dev": "next dev",
-  "prebuild": "drizzle-kit generate",
-
-  "build": "next build",
-  "start": "next start",
-  "db:push": "drizzle-kit push",
-  "db:generate": "drizzle-kit generate",
-  "db:migrate": "drizzle-kit migrate",
-  "db:studio": "drizzle-kit studio",
-
-  "lint": "next lint || true"
-},
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "prebuild": "drizzle-kit generate",
+    "build": "next build",
+    "start": "next start",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "lint": "next lint || true"
+  },
   "dependencies": {
     "@better-auth/stripe": "^1.3.34",
     "@hookform/resolvers": "^5.2.2",
@@ -57,6 +56,7 @@
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
