--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "iconsax-reactjs": "^0.0.8",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/locomotive-scroll": "^4.1.4",
     "@types/node": "^20",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
