--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@better-auth/stripe": "^1.3.34",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@imagekit/javascript": "^5.1.0",
     "@imagekit/next": "^2.1.3",
