--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
+    "recharts": "^3.5.0",
     "resend": "^6.4.2",
     "rough-notation": "^0.5.1",
     "sonner": "^2.0.7",
