--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sonner": "^2.0.7",
     "stripe": "^19.3.1",
     "swiper": "^12.0.3",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "uuid": "^13.0.0",
