--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
     "iconsax-reactjs": "^0.0.8",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
