--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint || true"
   },
   "dependencies": {
+    "@barba/core": "^2.10.3",
     "@better-auth/stripe": "^1.3.34",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
